--- a/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
-Copyright (C) 2016, 2020  AO Industries, Inc.
-	support@aoindustries.com
-	7262 Bull Pen Cir
-	Mobile, AL 36695
+Copyright (C) 2016, 2020, 2022  AO Industries, Inc.
+    support@aoindustries.com
+    7262 Bull Pen Cir
+    Mobile, AL 36695
 
 This file is part of semanticcms-autogit-taglib.
 
@@ -27,39 +27,39 @@ Gets the current git status.
 This is to be called by the JavaScript function getGitStatus.
 
 Request parameters:
-	None
+  None
 -->
 <result
-	xmlns:autogit="https://semanticcms.com/autogit/taglib/"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:jsp="http://java.sun.com/JSP/Page"
+  xmlns:autogit="https://semanticcms.com/autogit/taglib/"
+  xmlns:c="http://java.sun.com/jsp/jstl/core"
+  xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+  xmlns:jsp="http://java.sun.com/JSP/Page"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" />
-	<jsp:directive.page session="false" />
-	<jsp:directive.page contentType="application/xml" />
+  <jsp:directive.page language="java" pageEncoding="UTF-8" />
+  <jsp:directive.page session="false" />
+  <jsp:directive.page contentType="application/xml" />
 
-	<states>
-		<c:forEach var="state" items="${autogit:getStates()}">
-			<state name="${fn:escapeXml(state.name())}" toString="${fn:escapeXml(state.toString())}" cssClass="${fn:escapeXml(state.cssClass)}" />
-		</c:forEach>
-	</states>
-	<changes>
-		<c:forEach var="change" items="${autogit:getChanges()}">
-			<change name="${fn:escapeXml(change.name())}" cssClass="${fn:escapeXml(change.cssClass)}" />
-		</c:forEach>
-	</changes>
-	<meanings>
-		<c:forEach var="meaning" items="${autogit:getMeanings()}">
-			<meaning name="${fn:escapeXml(meaning.name())}" toString="${fn:escapeXml(meaning.toString())}" state="${fn:escapeXml(meaning.state.name())}" change="${fn:escapeXml(meaning.change.name())}" />
-		</c:forEach>
-	</meanings>
-	<c:set var="gitStatus" value="${autogit:getGitStatus()}" />
-	<gitStatus statusTime="${fn:escapeXml(gitStatus.statusTime)}" state="${fn:escapeXml(gitStatus.state.name())}">
-		<uncommittedChanges>
-			<c:forEach var="uncommittedChange" items="${gitStatus.uncommittedChanges}">
-				<uncommittedChange x="${fn:escapeXml(uncommittedChange.x)}" y="${fn:escapeXml(uncommittedChange.y)}" meaning="${fn:escapeXml(uncommittedChange.meaning.name())}" module="${fn:escapeXml(uncommittedChange.module)}" from="${fn:escapeXml(uncommittedChange.from)}" to="${fn:escapeXml(uncommittedChange.to)}" />
-			</c:forEach>
-		</uncommittedChanges>
-	</gitStatus>
+  <states>
+    <c:forEach var="state" items="${autogit:getStates()}">
+      <state name="${fn:escapeXml(state.name())}" toString="${fn:escapeXml(state.toString())}" cssClass="${fn:escapeXml(state.cssClass)}" />
+    </c:forEach>
+  </states>
+  <changes>
+    <c:forEach var="change" items="${autogit:getChanges()}">
+      <change name="${fn:escapeXml(change.name())}" cssClass="${fn:escapeXml(change.cssClass)}" />
+    </c:forEach>
+  </changes>
+  <meanings>
+    <c:forEach var="meaning" items="${autogit:getMeanings()}">
+      <meaning name="${fn:escapeXml(meaning.name())}" toString="${fn:escapeXml(meaning.toString())}" state="${fn:escapeXml(meaning.state.name())}" change="${fn:escapeXml(meaning.change.name())}" />
+    </c:forEach>
+  </meanings>
+  <c:set var="gitStatus" value="${autogit:getGitStatus()}" />
+  <gitStatus statusTime="${fn:escapeXml(gitStatus.statusTime)}" state="${fn:escapeXml(gitStatus.state.name())}">
+    <uncommittedChanges>
+      <c:forEach var="uncommittedChange" items="${gitStatus.uncommittedChanges}">
+        <uncommittedChange x="${fn:escapeXml(uncommittedChange.x)}" y="${fn:escapeXml(uncommittedChange.y)}" meaning="${fn:escapeXml(uncommittedChange.meaning.name())}" module="${fn:escapeXml(uncommittedChange.module)}" from="${fn:escapeXml(uncommittedChange.from)}" to="${fn:escapeXml(uncommittedChange.to)}" />
+      </c:forEach>
+    </uncommittedChanges>
+  </gitStatus>
 </result>
